- Added option to add a "last seen date" summary table for all backup sets on report (issue #73 - [report]lastseen* options in .rc file)
- Added logic to better parse incoming dates to catch simple delimiter errors (issue # 83)
- [main] applyutcoffset in .rc file is now set to 'true' by default on new installations. Avoids negative date different problems (Issue #84)


2.1.0
-----
- Large-scale rewrite of code
- Migrated to a python class-based structure and split code into multiple modules. Will make the
    code much easier to maintain going forward.
- Changed from comparing date/time strings to using timestamps. Makes date comparisons and
	time tracking much simpler.
- Simpler date/time format matching. Should eliminate (all?) local date/time format issues from 2.0.x series.
- Added new reports to organize backup jobs by source, destination, and run date
- Fixed and standardized internal date and time comparison processes by using timestamps everywhere in the database instead of date/time strings.
- Easy modification of date/time formats for international use (dateformat= and timeformat= .rc options)
- Date/time format can be specified per src/dest pair, if jobs are running in different locales.
- Dates can now be displayed in 12- or 24-hour format (display24hourtime= .rc option)
- Report can now use keyword substitution for subheading titles
- Reports can now be sent to one or more files in HTML, txt, or csv formats (-f command line option)
- Can prevent sending report email if only saving to output file (-x command line option)
- Option to email job warnings/errors if in collect mode (-c command line option, warnoncollect= .rc option)
- Column headings can be customized ([headings] section in .rc file)
- User can select which columns to display in a report ([headings] section in .rc file)
- Can specify background colors for subtitles, messages, warnings, and errors