@@ -7,6 +7,7 @@
 - Added option to add a "last seen date" summary table for all backup sets on report (issue #73 - [report]lastseen* options in .rc file)
 - Added logic to better parse incoming dates to catch simple delimiter errors (issue # 83)
 - [main] applyutcoffset in .rc file is now set to 'true' by default on new installations. Avoids negative date different problems (Issue #84)
+- [report] noactivitybg has been deprecated and is no longer used in the code. Background highlighting of unseen backups in HTML reports is now guided by the [report] lastseen* options in the .rc file
 
 
 2.1.0
